# my_arm

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  linux_bashrc  my_arm.pro  package.xml  qml.qrc  setup.py
3rd/Voxelyze/: Voxelyze.pro
3rd/dart/: dart.pro
3rd/mujoco/: mujoco_ai.pro
3rd/pybullet/: PG_Pong.py  enjoy_kuka_avoid_fallings_objs.py  initialize_qvalues.py  kukaBot.py  kukaJointSpaceGymEnvTest.py  menace_object.py  pybullet_gym.pro  train_kuka_avoid_fall_objs.py  train_kuka_catch_fall_objs.py
3rd/ros_vox_cad/: CMakeLists.txt  VoxCad.pri  VoxCad.pro  VoxCad.qrc  package.xml
3rd/ros_vox_cad/Data/: 1.vxa  2.vxa  3.vxa  4.vxa  Double_Obj.vxc  Hand.vxc  SingleVoxel.vxc  Towel.vxa  Towel.vxc  Towel_5x5x1.vxa  Towel_Large_Thin.vxa  Towel_Large_Thin.vxc  Towel_Medium_Thin.vxa  Towel_Medium_Thin.vxc  V_Defaultoxel
3rd/ros_vox_cad/Gazebo/include/: GazeboArmCommander.h  GazeboImageListener.h
3rd/ros_vox_cad/Gazebo/src/: GazeboArmCommander.cpp  GazeboImageListener.cpp
3rd/ros_vox_cad/QTUtils/: QOpenGL.cpp  QOpenGL.h
3rd/ros_vox_cad/VoxCad/: Dlg_Physics.cpp  QVX_Interface.cpp  QVX_Interfaces.h  VoxCad.cpp  VoxCad.h  VoxCad.ui  main.cpp
3rd/ros_vox_cad/Voxelyze/: VXS_SimGLView.cpp  VXS_SimGLView.h  VXS_Voxel.cpp  VXS_Voxel.h  VX_Environment.h  VX_MeshUtil.cpp  VX_MeshUtil.h  VX_Object.cpp  VX_Sim.cpp  VX_Sim.h  VX_Voxel.h
3rd/ros_vox_cad/Voxelyze/Utils/: GL_Utils.cpp  GL_Utils.h  Vec3D.h
3rd/ros_vox_cad/launch/: ros_vox_cad.launch
3rd/ros_vox_cad/voxelyzeMain/: 1  voxelyze
3rd/vrep/: LBR4p_non_threaded.lua  LBR4p_threaded.lua  UR5_barrett_hand_Joint_Custom_Control.ttt  automotive_sensor.ttt  hexapod_balance_plate_IK_Control.ttt  jaco_balance_plate.ttt  lbr_kuka_barrett_balance_plate.ttt  lbr_kuka_barrett_balance_plate_Arm_Custom_Hand_Custom_Control.ttt  lbr_kuka_barrett_balance_plate_Arm_Hybrid_Control.ttt  lbr_kuka_barrett_balance_plate_Arm_Position_Hand_Custom_Control.ttt  lbr_kuka_barrett_balance_plate_Joint_Custom_Control.ttt  lbr_kuka_barrett_balance_plate_Joint_Hybrid_Control.ttt  lbr_kuka_barrett_hold_obj_Hybrid_Control.ttt  lbr_kuka_barrett_hold_tube_Arm_Custom_Hand_Custom_Control.ttt  lbr_kuka_barrett_hold_tube_Arm_Position_Hand_Custom_Control.ttt  lbr_kuka_barrett_suction_balance_plate_Arm_Position_Control.ttt  lbr_kuka_catch_obj.ttt  lbr_kuka_suction_balance_ball.ttt  lbr_kuka_suction_balance_plate.ttt  lbr_kuka_suction_balance_plate_pos4_5_6.ttt  lbr_kuka_suction_catch_balance_plate.ttt  lbr_kuka_suction_catch_obj.ttt  lbr_kuka_suction_catch_obj_Arm_Position_Control.ttt  lbr_kuka_suction_obj_pick.ttt  lbr_kuka_suction_object_rotate.ttt  lbr_kuka_suction_object_support.ttt  lbr_kuka_suction_object_support_smooth.ttt  my_arm.ttt  my_arm_in_operation_avoidance.ttt  my_arm_learning.ttt  my_arm_learning_non_threaded.lua  my_arm_learning_threaded.lua  my_arm_pure_avoidance.ttt  ompl_training.ttt  ur5_air_catching.ttt  ur5_conveyor_belt_picking.ttt  youBot_avoidance.ttt  youBot_learning_non_threaded.lua
3rd/xcslib/: README  action_base.hpp  binary_action.cpp  binary_action.hpp  binary_inputs.cpp  binary_inputs.hpp  boolean_action.cpp  boolean_action.hpp  condition_base.hpp  dummy_action.cpp  dummy_action.hpp  environment_base.hpp  experiment_mgr.cpp  experiment_mgr.hpp  fsm_env.cpp  fsm_env.hpp  generic.cpp  generic.hpp  grid_env.cpp  grid_env.hpp  inputs_base.hpp  integer_action.cpp  integer_action.hpp  interval.hpp  makefile  makefile.others  multiplexer_env.cpp  multiplexer_env.hpp  parity_env.cpp  parity_env.hpp  prediction_functions.hpp  real_functions_env.cpp  real_functions_env.hpp  real_inputs.cpp  real_inputs.hpp  real_interval_condition.cpp  real_interval_condition.hpp  rl_definitions.hpp  ternary_condition.cpp  ternary_condition.hpp  (+23 more)
config/: moveit.rviz  ur10srh.srdf
include/Gazebo/: gazebo_marker_plugin.h  gazebo_my_arm_commander_plugin.h  gazebo_selection_box.h  gazebo_voxel_mesh.h  gazebo_voxel_mesh_renderer.h
include/LeapMotion/: camera_listener.h  hands_listener.h  leap_msg.h  leapros_msg.h
include/RealSense/: Capture.h  Image.h  PlatformCameraControl.h  Playback.h  PowerState.h  Recording.h  Sample.h  SampleReader.h  VideoModuleCommon.h
include/Rviz/: VMarker.h  mesh_display_custom.h
include/dart/: DartRobotController.hpp  DartUtils.h  MainWindow.h
include/my_arm/: GeopadMainWindowAgent.h  GeopadQMLAdapter.h  K3DMaskedMouseArea.h  K3DQMLItemAgent.h  K3DQMLItemInfo.h  K3DStateMachine.h  KsGlobal.h  RobotAgent.h  RobotArmControllerMain.h  RobotDartAdapter.h  RobotGazeboAdapter.h  RobotKinectAdapter.h  RobotLeapAdapter.h  RobotMoveIt.h  RobotRealSenseAdapter.h  RobotThread.h  RobotVoxelyzeAdapter.h  base64.h  commondefines.h  voxel_mesh_msg.h
javascript/: qmlcommonresource.js  qmlcommonutil.js
launch/: jaco_arm_commander.launch  jaco_standalone_gazebo.launch  my_arm_commander.launch  my_arm_pisa_iit_soft_hand.launch  my_arm_world.launch  my_shadow_robot_hand.launch  my_soft_hand.launch  my_ur_arm_shadow_robot_hand.launch  test_two_arms.launch
launch/LeapMotion/: leap_camera.launch  leap_stereo.launch  sensor_sender.launch
model/: myArm.urdf  myArm2.urdf
models/: jaco.urdf.xacro  jaco_robot.urdf  jaco_robot.urdf.xacro  jaco_robot_multi.urdf.xacro  materials.xacro  myArm.gazebo  myArm2.gazebo  myArm2.urdf  myArm2.xacro  myArm_brHand.urdf  myArm_brHand.xacro  myArm_gripper.urdf  myArm_softHand.xacro  mySoftHand.xacro  transformURDF.sh
models/pisa_iit_soft_hand/: soft_hand.inertia.xacro  soft_hand.urdf.xacro
models/plate/: model.config  model.sdf
msg/VoxelMesh/: voxel_mesh.msg
qml/: GeoJoypad.qml  Geopad.qml  GeopadDoubleSpinBox.qml  GeopadFunctionButton.qml  GeopadLabel.qml  GeopadSlider.qml  GeopadSpinBox.qml  MainGBSingletonObject.qml  MainProgressBar.qml  RobotArmControl.qml
qml/k3dBase/: K3DBorderRectangle.qml  K3DButton.qml  K3DCheckBox.qml  K3DCircularProgressBar.qml  K3DComboBox.qml  K3DComboBoxButton.qml  K3DContextMenuList.qml  K3DDialog.qml  K3DDialogVolumeControl.qml  K3DDragButton.qml  (+33 more)
worlds/: robotArm.world  shadowhand.world  shadowhand_full.world  smart_grasping.world  universe.world
(+563 files in other folders)
